--- a/client/index.html
+++ b/client/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="ru">
 <head>
   <title>Pixel 3</title>
   <meta charset="utf-8">
@@ -17,7 +17,7 @@
 <body>
 
 <div class="container">
-  <div class="wraperheader">
+  <div class="wraperheader" id="wraperheader">
     <div class="container col-11">
       <header class="row pt-4 pb-4">
         <div class="col">
@@ -49,19 +49,19 @@
         <div class="collapse navbar-collapse my-navbar justify-content-center" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="#">Главная</a>
+              <a class="nav-link" href="#wraperheader">Главная</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Каталог</a>
+              <a class="nav-link" href="#catalog">Каталог</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Доставка и оплата</a>
+              <a class="nav-link" href="#wraperheader">Доставка и оплата</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Прайс лист</a>
+              <a class="nav-link" href="#catalog">Прайс лист</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Контакты</a>
+              <a class="nav-link" href="#footer">Контакты</a>
             </li>
           </ul>
         </div>
@@ -95,47 +95,41 @@
   </div>
 
   <div class="wrappercontent pb-5">
-    <div class="container col-11">
-      <div class=" col-auto path"></div>
+    <div class="container col-11" id="catalog">
+      <div class="col-auto path"></div>
       <div class="row">
         <aside class="col-auto">
           <nav class="productsnav">
-            <a href="#" class="productLinks1"> Автомобили
-              <ul>
-                <li class="toggleLi1"><a class="productLinks7" href="#">BMV</a></li>
-                <li class="toggleLi1"><a class="productLinks7" href="#">Audi</a></li>
-              </ul>
-            </a>
-            <a href="#" class="productLinks2"> Бытовая техника
-              <ul>
-                <li class="toggleLi2"><a class="productLinks7" href="#">Bosh</a></li>
-                <li class="toggleLi2"><a class="productLinks7" href="#">Vitek</a></li>
-              </ul>
-            </a>
-            <a href="#" class="productLinks3"> Мобильныя техника
-              <ul>
-                <li class="toggleLi3"><a class="productLinks7" href="#">Apple</a></li>
-                <li class="toggleLi3"><a class="productLinks7" href="#">Nokia</a></li>
-              </ul>
-            </a>
-            <a href="#" class="productLinks4"> Компьютеры
-              <ul>
-                <li class="toggleLi4"><a class="productLinks7" href="#">PC</a></li>
-                <li class="toggleLi4"><a class="productLinks7" href="#">Notebook</a></li>
-              </ul>
-            </a>
-            <a href="#" class="productLinks5"> Одежда
-              <ul>
-                <li class="toggleLi5"><a class="productLinks7" href="#">Supreme</a></li>
-                <li class="toggleLi5"><a class="productLinks7" href="#">Givenchy</a></li>
-              </ul>
-            </a>
-            <a href="#" class="productLinks6"> Недвижимость
-              <ul>
-                <li class="toggleLi6"><a class="productLinks7" href="#">Apartments</a></li>
-                <li class="toggleLi6"><a class="productLinks7" href="#">Homes</a></li>
-              </ul>
-            </a>
+            <a href="#catalog" class="productLinks">Автомобили</a>
+            <ul>
+              <li class="toggleLi"><a href="#catalog" class="productLink">BMV</a></li>
+              <li class="toggleLi"><a href="#catalog" class="productLink">Audi</a></li>
+            </ul>
+            <a href="#catalog" class="productLinks">Бытовая техника</a>
+            <ul>
+              <li class="toggleLi"><a href="#catalog" class="productLink">Bosh</a></li>
+              <li class="toggleLi"><a href="#catalog" class="productLink">Vitek</a></li>
+            </ul>
+            <a href="#catalog" class="productLinks">Мобильныя техника</a>
+            <ul>
+              <li class="toggleLi"><a href="#catalog" class="productLink">Apple</a></li>
+              <li class="toggleLi"><a href="#catalog" class="productLink">Nokia</a></li>
+            </ul>
+            <a href="#catalog" class="productLinks">Компьютеры</a>
+            <ul>
+              <li class="toggleLi"><a href="#catalog" class="productLink">PC</a></li>
+              <li class="toggleLi"><a href="#catalog" class="productLink">Notebook</a></li>
+            </ul>
+            <a href="#catalog" class="productLinks">Одежда</a>
+            <ul>
+              <li class="toggleLi"><a href="#catalog" class="productLink">Supreme</a></li>
+              <li class="toggleLi"><a href="#catalog" class="productLink">Givenchy</a></li>
+            </ul>
+            <a href="#catalog" class="productLinks">Недвижимость</a>
+            <ul>
+              <li class="toggleLi"><a href="#catalog" class="productLink">Apartments</a></li>
+              <li class="toggleLi"><a href="#catalog" class="productLink">Homes</a></li>
+            </ul>
           </nav>
         </aside>
         <section class="col pl-2">
@@ -179,9 +173,9 @@
                   <span class="sr-only">Previous</span>
                 </a>
               </li>
-              <li class="page-item"><a class="page-link" href="#">1</a></li>
+              <li class="page-item active"><a class="page-link" href="#">1</a></li>
               <li class="page-item"><a class="page-link" href="#">2</a></li>
-              <li class="page-item active"><a class="page-link" href="#">3</a></li>
+              <li class="page-item"><a class="page-link" href="#">3</a></li>
               <li class="page-item">
                 <a class="page-link" href="#" aria-label="Next">
                   <span aria-hidden="true">&raquo;</span>
@@ -211,7 +205,7 @@
       </div>
     </div>
   </div>
-  <footer class="container mt-5 myfooter">
+  <footer class="container mt-5 myfooter" id="footer">
     <div class="row justify-content-around pt-5 pb-4">
       <div class="col-auto pt-4">
         <p>© 2012–2013 ЗАО «Компания»</p>
@@ -219,11 +213,11 @@
       </div>
       <div class="col-auto">
         <ul class="myfooternav">
-          <li><a href="#">Главная</a></li>
-          <li><a href="#">Каталог</a></li>
-          <li><a href="#">Доставка и оплата</a></li>
-          <li><a href="#">Прайс-лист</a></li>
-          <li><a href="#">Контакты</a></li>
+          <li><a href="#wraperheader">Главная</a></li>
+          <li><a href="#catalog">Каталог</a></li>
+          <li><a href="#wraperheader">Доставка и оплата</a></li>
+          <li><a href="#catalog">Прайс-лист</a></li>
+          <li><a href="#footer">Контакты</a></li>
         </ul>
       </div>
       <div class="col-auto pt-4">
@@ -244,8 +238,8 @@
       <input type="text" class="form-control" id="exampleInputFirstname" required>
     </div>
     <div class="form-group">
-      <label for="exampleInputFirstname">Телефон *</label>
-      <input type="text" class="form-control" id="exampleInputFirstname" required>
+      <label for="exampleInputFirstname1">Телефон *</label>
+      <input type="text" class="form-control" id="exampleInputFirstname1" required>
     </div>
     <div class="form-group">
       <label for="exampleInputEmail1">Email *</label>
