--- a/client/index.html
+++ b/client/index.html
@@ -23,7 +23,7 @@
         <div class="col">
           <div class="row">
             <div class="col-auto logo">
-              <a href="#" class="navbar-brand"><img src="./images/logo.png" alt="logo"></a>
+              <a href="#wraperheader" class="navbar-brand"><img src="./images/logo.png" alt="logo"></a>
             </div>
             <div class="col-auto mt-2">
               <h3>Название<br>компании</h3>
@@ -34,7 +34,7 @@
         <div class="col-auto phones">
           <h3>+7(499) 777 77 77</h3>
           <h3>+7(499) 777 77 77</h3>
-          <a href="#" class="feedback">Обратная связь</a>
+          <a href="#wraperheader" class="feedback">Обратная связь</a>
         </div>
       </header>
     </div>
@@ -138,46 +138,46 @@
               <img src="./images/product.png" alt="product">
               <p>Самый клевый чайник, <br> который надо купить!</p>
               <h5>1 900 р.</h5>
-              <a href="#"><img class="basket" src="./images/addtobusket.png" alt="basket"></a>
+              <a><img class="basket" src="./images/addtobusket.png" alt="basket"></a>
             </div>
             <div class="col-auto product">
               <img src="./images/product.png" alt="product">
               <p>Самый клевый чайник, <br> который надо купить!</p>
               <h5>1 900 р.</h5>
-              <a href="#"><img class="basket" src="./images/addtobusket.png" alt="basket"></a>
+              <a><img class="basket" src="./images/addtobusket.png" alt="basket"></a>
             </div>
             <div class="col-auto product">
               <img src="./images/product.png" alt="product">
               <p>Самый клевый чайник, <br> который надо купить!</p>
               <h5>1 900 р.</h5>
-              <a href="#"><img class="basket" src="./images/addtobusket.png" alt="basket"></a>
+              <a><img class="basket" src="./images/addtobusket.png" alt="basket"></a>
             </div>
             <div class="col-auto product">
               <img src="./images/product.png" alt="product">
               <p>Самый клевый чайник, <br> который надо купить!</p>
               <h5>1 900 р.</h5>
-              <a href="#"><img class="basket" src="./images/addtobusket.png" alt="basket"></a>
+              <a><img class="basket" src="./images/addtobusket.png" alt="basket"></a>
             </div>
             <div class="col-auto product">
               <img src="./images/product.png" alt="product">
               <p>Самый клевый чайник, <br> который надо купить!</p>
               <h5>1 900 р.</h5>
-              <a href="#"><img class="basket" src="./images/addtobusket.png" alt="basket"></a>
+              <a><img class="basket" src="./images/addtobusket.png" alt="basket"></a>
             </div>
           </div>
           <nav aria-label="Page navigation example" class="mypaging col-auto pl-0 pr-0">
             <ul class="pagination justify-content-center">
               <li class="page-item">
-                <a class="page-link" href="#" aria-label="Previous">
+                <a class="page-link" aria-label="Previous">
                   <span aria-hidden="true">&laquo;</span>
                   <span class="sr-only">Previous</span>
                 </a>
               </li>
-              <li class="page-item active"><a class="page-link" href="#">1</a></li>
-              <li class="page-item"><a class="page-link" href="#">2</a></li>
-              <li class="page-item"><a class="page-link" href="#">3</a></li>
+              <li class="page-item active"><a class="page-link">1</a></li>
+              <li class="page-item"><a class="page-link">2</a></li>
+              <li class="page-item"><a class="page-link">3</a></li>
               <li class="page-item">
-                <a class="page-link" href="#" aria-label="Next">
+                <a class="page-link" aria-label="Next">
                   <span aria-hidden="true">&raquo;</span>
                   <span class="sr-only">Next</span>
                 </a>
@@ -224,7 +224,7 @@
         <div class="row">
           <img class="footerlogo mr-2" src="./images/footerlogo.jpg" alt="logo">
           <p>
-            <a href="#" class="myfooterlogo"> Разработка сайта — </a> <br>
+            <a href="#footer" class="myfooterlogo"> Разработка сайта — </a> <br>
             компания «Пиксель Плюс»
           </p>
         </div>
